agrego estilos al fondo

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,15 +1,10 @@
 .title {
+  padding-top: 8vw;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 2rem;
+  gap: 3vw;
 }
-.title img {
-  width: 15rem;
-  user-select: none;
-}
-
 .buttonPlay {
   background-color: rgb(29, 29, 29);
   padding: 15px;
@@ -28,5 +23,4 @@
   padding: 10px;
   border: 1px solid black;
   border-radius: 20px;
-  margin-bottom: 80px;
 }
